# mare-prospector

./: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json
aeo-geo/: _template.html  after.html  before.html  build_demo.py  faq.html  homepage_schema.html  product_schema_template.html  readme.md
app/: global.css  layout.js  page.js
app/api/prospect/: route.js
app/lib/: auditPrompt.js  auditSalon.js  discoverSalons.js  firecrawl.js
backend/: pyproject.toml
backend/scripts/: probe_vertex.py
backend/secrets/: README.md
backend/src/mare/: __init__.py  __main__.py  api.py  cli.py  config.py  gemini_client.py
backend/src/mare/brand/: __init__.py  ai_red_flags.py  identity.py  products.py  salon_lingo.py  vocabulary.py  voice.py
backend/src/mare/content/: __init__.py  blogs.py  brief.py  channels.py  image_prompts.py  image_renderer.py  pipeline.py  search_optimization.py  shorts.py  social.py  video_adapters.py
backend/src/mare/outreach/: __init__.py  detector.py  personalizer.py  postcard.py  prospect.py  templates.py
backend/src/mare/workflow/: __init__.py  graph.py  nodes.py  state.py  store.py
backend/tests/: test_channels.py  test_detector.py  test_identity.py  test_vertex_routing.py  test_vocabulary.py
frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/render/: route.ts
src/: auditPrompt.js  auditSalon.js  discoverSalons.js  genai.js
